Fixed clearfix issue with image gallery and footer.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             </div>
         </header>
         <div class="wrapper">
-            <ul id="imageGallery">
-                <li class='standard'><a href="img/Affenpinscher.jpg"><img src="img/Affenpinscher.jpg" alt="Affenpinscher"></a></li>
+            <ul class="clearfix" id="imageGallery">
+                <li class='standard'><a href="img/Affenpinscher.jpg"><img src="img/Affenpinscher.jpg" alt="Affenpinscher"></a>
+                </li>
                 <li class='standard'><a href="img/AiredaleTerrier.jpg"><img src="img/AiredaleTerrier.jpg" alt="Airedale Terrier"></a></li>
                 <li class='standard'><a href="img/Akita.jpg"><img src="img/Akita.jpg" alt="Akita"></a></li>
                 <li class='standard'><a href="img/AlaskanMalamute.jpg"><img src="img/AlaskanMalamute.jpg" alt="Alaskan Malamute"></a></li>
